deploy/base/model-network-policy.yaml
{
  "apiVersion": "networking.k8s.io/v1",
  "kind": "NetworkPolicy",
  "metadata": {
    "name": "model-ingress"
  },
  "spec": {
    "podSelector": {
      "matchLabels": {
        "serving.kserve.io/inferenceservice": "command-helper"
      }
    },
    "policyTypes": [
      "Ingress"
    ],
    "ingress": [
      {
        "from": [
          {
            "podSelector": {
              "matchLabels": {
                "intro-ai-model-client": "true"
              }
            }
          }
        ],
        "ports": [
          {
            "protocol": "TCP",
            "port": 8080
          }
        ]
      }
    ]
  }
}
